# stylus-inheritance

./: Cargo.toml  README.md
src/: base.rs  chained.rs  lib.rs  method_override.rs  utils.rs
src/erc20/: base.rs  mod.rs  params.rs  token.rs
tests/: base_test.rs  simple_test.rs
