[package]
name = "stylus-inheritance-examples"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Examples of inheritance patterns in Arbitrum Stylus"

[dependencies]
stylus-sdk = "0.8.4"
alloy-primitives = "0.8.20"
alloy-sol-types = "0.8.20"

[dev-dependencies]
hex = "0.4.3"

[features]
export-abi = ["stylus-sdk/export-abi"]
testing = ["stylus-sdk/stylus-test"]
# Legacy testing flag - don't enable this (kept for reference only)
legacy-testing = []
# Contract features - only enable one at a time
base-contract = []
method-override-contract = []
chained-contract = []
utils-contract = []
erc20-contract = []

[lib]
crate-type = ["cdylib", "rlib"]
